# milkyhoop-backend

./: .dockerignore  .env.encrypted  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  EXTENDED_AUDIT_REPORT.md  FIELD_MAPPING_AUDIT_REPORT.md  FULL_AUDIT_REPORT.md  Makefile  OVERNIGHT_AGENT_PROMPT.md  README.md  backup_all_matviews.sql  backup_chat_data_20251113_143015.sql  backup_laporan_laba_rugi_view.sql  backup_schema_20251113_143015.sql  check-container-drift.sh  clean_build_readiness_20251004_100805.md  comprehensive-audit.sh  container-drift-report.txt  container_deps_current.txt  coordinated_rebuild.sh  corrupted_engine_backup.py  customer_production.py  dependency_sync_validation_20251004_100805.txt  dependency_test_plan.md  deps_diff.txt  docker-compose-dev.yml  docker-compose.dev-volumes.yml  docker-compose.yml  docker-compose.yml.backup-20250910-173223  docker-compose.yml.backup-20250912_161948  docker-compose.yml.backup-before-volume-20250914-162444  docker-compose.yml.backup-port-fix-20250910_124157  docker-compose.yml.backup-port-fix-20250911_114244  docker-compose.yml.backup-port-isolation-20250910_134642  docker-compose.yml.backup_20250914_172123  docker-compose.yml.backup_fix_20250915_034848  (+38 more)
backend/services/auth_service/: Dockerfile  pyproject.toml  pyproject.toml.backup_20250910_101140  requirements.txt  requirements.txt.cleanup_backup_20250910_050711
backend/services/auth_service/app/: auth_service_pb2.py  auth_service_pb2_grpc.py  config.py  grpc_server.py  grpc_server.py.bak_audit_20251014_091819  grpc_server.py.before_field_fix  grpc_server.py.before_init_add  grpc_server.py.before_pb_fix  grpc_server.py.before_register_response  grpc_server.py.before_role_fix_1760410113  grpc_server.py.before_session_fix
backend/services/auth_service/app/mfa/: __init__.py  backup_codes.py  totp.py
backend/services/auth_service/app/utils/: jwt_handler.py  password_handler.py
backend/services/auth_service/protos/: context_service_pb2.py  ragindex_service_pb2_grpc.py
backend/services/auth_service/scripts/: milky_cli.py
backend/services/business_extractor/: Dockerfile  Dockerfile.enhance3.0  pyproject.toml
backend/services/business_extractor/app/: business_extractor_pb2_grpc.py  config.py  grpc_server.py  test_delete_hoop.py  test_get_hoop_metadata.py  test_list_hoop.py  test_register_hoop.py  test_search_hoop.py  test_update_hoop_metadata.py
backend/services/business_extractor/app/protos/: template_service_pb2_grpc.py
backend/services/conversation_service/: Dockerfile.enhance3.0  pyproject.toml  requirements.txt
backend/services/conversation_service/app/: config.py  conversation_service_pb2_grpc.py  grpc_server.py
backend/services/inventory_service/: Dockerfile  Dockerfile.enhance3.0  go.mod  go.sum  pyproject.toml
backend/services/inventory_service/app/: config.py  grpc_server.py  inventory_service_pb2_grpc.py
backend/services/inventory_service/app/services/: product_search.py
backend/services/inventory_service/cmd/server/: main.go
backend/services/inventory_service/internal/delivery/: compiler_server.go
backend/services/inventory_service/internal/monitoring/: metrics.go
backend/services/inventory_service/tests/: test_compile_client.go  test_healthcheck.py
backend/services/inventory_service/tests/testdata/: sample_flow.json  sample_flow.pb
backend/services/setup_orchestrator/: =4.6.0  Dockerfile  pyproject.toml  requirements.txt
backend/services/setup_orchestrator/app/: config.py  conversation_manager_pb2.py  grpc_server.py  grpc_server.py.before_debug_20251104_154101  grpc_server.py.before_debug_20251104_162953  grpc_server.py.before_extract_fix  grpc_server.py.container_backup_20251021_140539  grpc_server.py.container_backup_20251104_190045  grpc_server.py.container_backup_20251104_191828  grpc_server.py.pre-diagnostic  reporting_service_pb2_grpc.py  transaction_service_pb2.py  transaction_service_pb2_grpc.py
backend/services/setup_orchestrator/app/formatters/: __init__.py
backend/services/setup_orchestrator/app/google/: health_pb2.py
backend/services/setup_orchestrator/app/handlers/: __init__.py  accounting_handler.py  business_handler.py  financial_handler.py  inventory_handler.py  transaction_handler.py
backend/services/setup_orchestrator/app/services/: __init__.py  adaptive_response.py  data_cleaner.py
backend/services/setup_orchestrator/app/stubs_backup_20251102_060225/: business_extractor_pb2.py  intent_parser_pb2.py  intent_parser_pb2_grpc.py  ragllm_service_pb2.py  setup_orchestrator_pb2_grpc.py
backend/services/setup_orchestrator/configs/: app_config.yaml
backups/cust_orchestrator_20251004_150035/: pyproject.toml  requirements.txt
backups/cust_orchestrator_20251004_150035/app/: orchestrator.py.timeout_fix_backup
backups/cust_orchestrator_20251004_150035/app/clients/: ragllm_client.py.pre_fix_backup
backups/cust_orchestrator_20251004_150035/app/services/: reference_resolver.py
git_backup_20251004_155929/backend/services/ragllm_service/: pyproject.toml  requirements.txt
host_files_pre_sync_20251004_092124/backend/api_gateway/: pyproject.toml  validate_build.sh
host_files_pre_sync_20251004_092124/backend/api_gateway/app/: grpc_server.py
host_files_pre_sync_20251004_092124/backend/api_gateway/app/routers/: integrate_parse_endpoint.py  ragcrud_test.py
host_files_pre_sync_20251004_092124/backend/api_gateway/app/services/: orchestrator_client.py
host_files_pre_sync_20251004_092124/backend/api_gateway/libs/milkyhoop_prisma_broken_backup_20250914_172341/: client.py
host_files_pre_sync_20251004_092124/backend/api_gateway/libs/milkyhoop_protos/: auth_service.proto  payment_service_pb2_grpc.py  tenant_manager_pb2_grpc.py  test_pb2.py  (+1 more)
host_files_pre_sync_20251004_092124/backend/services/cust_orchestrator/: Dockerfile  pyproject.toml
host_files_pre_sync_20251004_092124/backend/services/payment-adapter/: pyproject.toml
host_files_pre_sync_20251004_092124/backend/services/tenant_parser/: .env.pre_sync_20250910_094609  pyproject.toml  test_proto_classes.py
(+3383 files in other folders)
