[tool.poetry]
name = "auth_service"
version = "1.0.0"
description = "MilkyHoop Authentication Service"
authors = ["MilkyHoop Dev <dev@milkyhoop.com>"]

[tool.poetry.dependencies]
pydantic = "^2.11.7"
python = "^3.10"
grpcio = "^1.71.0"
grpcio-health-checking = "^1.63.0"
grpcio-reflection = "^1.63.0"
protobuf = "^5.29.0"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
prisma = "^0.15.0"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.63.0"
pytest = "^8.1.1"
