[tool.poetry]
name = "conversation-service"
version = "1.0.0"
description = "MilkyHoop Conversation Service - Chat Persistence"
authors = ["MilkyHoop Team"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
grpcio-health-checking = "^1.71.0"
protobuf = "^5.29.0"
grpc-interceptor = "^0.15.0"
python-dotenv = "^1.0.1"
prisma = "0.15.0"
structlog = "^25.2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.26.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"