[tool.poetry]
name = "milkyhoop-api-gateway"
version = "3.0.0"
description = "MilkyHoop API Gateway - Direct Dependencies Only"
authors = ["MilkyHoop Dev <dev@milkyhoop.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core Web Framework
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

# Data Validation & Serialization
pydantic = "^2.11.0"

# HTTP Clients
httpx = "^0.28.0"
requests = "^2.32.0"

# gRPC Communication
grpcio = "^1.74.0"
grpcio-tools = "^1.74.0"
grpcio-health-checking = "^1.74.0"
grpc-interceptor = "^0.15.0"
protobuf = "^5.29.0"

# Database & ORM
prisma = "^0.15.0"

# Authentication & Security
pyjwt = "^2.8.0"
bcrypt = "^4.0.0"

# Logging & Monitoring
structlog = "^25.0.0"
prometheus-client = "^0.20.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
mypy = "^1.9.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
