[tool.poetry]
name = "template-service-python-prisma"
version = "0.1.0"
description = "Template Python gRPC Service Prisma-ready untuk MilkyHoop"
authors = ["MilkyHoop Dev <dev@milkyhoop.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
openai = "^1.107.0"
pydantic = "^2.11.7"
python = "^3.11"
grpcio = "^1.74.0"
grpcio-health-checking = "^1.74.0"
grpcio-reflection = "^1.63.0"
protobuf = "^5.29.0"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
prisma = "^0.15.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.1"
scikit-learn = "^1.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.74.0"
pytest = "^8.1.1"
