[tool.poetry]
name = "template-service-python"
version = "0.1.0"
description = "Template Python gRPC Service untuk MilkyHoop"
authors = ["MilkyHoop Dev <dev@milkyhoop.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.63.0"
grpcio-health-checking = "^1.63.0"
grpcio-reflection = "^1.63.0"
protobuf = "^5.26.1"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
# Prisma Python Client (opsional jika pakai DB)
prisma = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
